web/src/App.scss
:root{
    // colors
    --black-color:#0D0D0D;
    --dark-color: #101214;
    --dark-blue: #14181E;
    --light-color:#E5E5E5;
    --night-blue:#023E73;
    --highlight-blue:#034C8C;
    --grey-color: rgba(255, 255, 255, 0.3);
    --overlay-color: rgba(13, 13, 13, 0.6);
    //--dark-color: rgba(255, 255, 255, 0.05);

    --font-body: 'Open Sans', sans-serif;
    --small-p: 12.5px;
    --medium-p: 13px;
    --h1-size: 40px;
    --h2-size: 24px;
    --h3-size: 18px;
    --semibold: 600;

    --round-border: 5px;
    --rounder-border: 10px;
    --rounderer-border: 30px;
    --thin-border: 1.5px;
    --normal-border: 1.75px;
    --thick-border: 2px;

    --small-space: 10px;
    --medium-space: 12px;

    --transition-time-slow: 600ms;
    --transition-time-fast: calc(var(--transition-time-slow) / 2);

    --filter-width: 200px;
}

main{
    background-image: url("rocks-background.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    text-align: center;
    overflow: hidden;
    height: 100vh;
    font-family: var(--font-body);
    font-size: var(--small-p);
    color: var(--light-color);
}

h1{
    font-size: var(--h1-size);
    font-weight: bold;
}

h2 {
    font-size: var(--h2-size);
    font-weight: bold;
    line-height: 40px;
}

h3 {
    font-size: var(--h3-size);
    font-weight: var(--semibold);
}

// for column headings
h6{
    font-size: var(--medium-p);
    font-weight: bold;
    margin: auto;
}

p{
  font-size: var(--small-p);
}

input{
    font-family: var(--font-body);
    color: var(--light-color);
    background-color: var(--black-color);
    border-style: none;
    border-radius: var(--round-border);
    //margin: var(--margin);
    padding: 8px var(--small-space);
    outline: none;
    width: 100%;
}
input[type=checkbox] {
    width: 30px;
}
// input[type=submit] {
  //display: flex;
//   justify-content: center;
//   align-items: center;
//   text-align: center;
//   margin-top: 20px;
//   margin-bottom: 20px;
  
//   width: 120px;
//   height: 46px;
//   left: calc(50% - 120px/2 + 3px);
//   top: calc(50% - 46px/2 + 92px);

//   font-weight: var(--semibold);
//   font-size: 16px;
//   line-height: 22px;
  
//   border: 0px;
//   //background: var(--highlight-blue);
//   cursor: pointer;
//}
// input[type=submit]:hover {
//   background-color: var(--night-blue);
// }


label {
  font-size: 12px;
  color: var(--light-color);
}


a{
  text-decoration: none;
}

.page {
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    display: block;
}
.login-page {
    display: flex;
    justify-content: center;
    align-items: center;
}


.full-page, .overlay, .login-page {
    width: 100vw;
    height: 100vh;
}

.overlay {
    background-color: var(--overlay-color);
    position: fixed;
    left: 0;
    top: 0;
    z-index: 2;

    // align to the center of the page
    display: flex;
    justify-content: center;
    align-items: center;
}

.login{
    width: 30%;
}

.login-content{
    margin: 60px;
}

.formLogin{
  text-align: left;
  width: 100%;
  height: 176px;
  top: 172px;
}

.inputLabel{
  font-weight: 600;
}

.inputField{
  font-size: var(--medium-p);
  border: 1.75px solid var(--light-color);

  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  box-sizing: border-box;
  // padding:13px 13px;
  // margin-top: 4px;
  // margin-bottom:15px;
}

.forgotpword{
  color: var(--highlight-blue);
  font-size: var(--small-p);
  margin-top: 0px;
}
.forgotpword:hover{
  color: var(--highlight-blue);
}

////// DASHBOARD

nav{
    display: block;
    height: 5vh;
}

.contact-nav {
    display: flex;
    justify-content: space-between;
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

.user-profile {
    float: right;
}

.page-content{
    width: var(--table-width);
    margin: auto;
    display: block;
}

.actions-bar{
  margin: 5px 0px;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.container {
    border-radius: var(--rounder-border);
    background-color: var(--black-color);
}
.login .container{
    border-radius: var(--rounder-border);
}
.box {
    border-radius: var(--round-border);
    background-color: var(--black-color);
}

.search {
    width: 250px;
    padding: 0px var(--medium-space);
    color: var(--grey-color); // sets icon color
    form {
        display: flex;
        align-items: center;
    }
    input {
        background-color: transparent;
    }
}

.search:hover, .filter:hover {
    background-color: var(--dark-color);
}

.filter {
    width: var(--filter-width);
    position: relative;
    display: inline-block;
}
.tagRound{
    padding: 1px 20px;
    border-radius: 30px;
    margin: 15px;
    width: fit-content;
    text-align: center;
    p{
        margin: 5px;
        padding: 0;
    }
}
.dropdown {
    background-color: var(--dark-color);
    border-radius: var(--round-border);
    position: absolute;
    width: var(--filter-width);
    //box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
    opacity: 0;
    visibility: hidden;
    // transform: translateY(-20px);
    // transition: opacity 0.4s ease, transform 0.4s ease, visibility 0.4s;

    li {
        display: flex;
        align-items: center;
        height: 36px;
    }
    li:hover {
        background-color: var(--dark-blue);
        border-radius: var(--round-border);
    }
}
.dropdown.open {
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

form {
    width: 100%;
}

:hover {
    transition: all var(--transition-time-slow) ease;
}

.outlined {
    border: var(--normal-border) solid var(--light-color);
    background-color: transparent;
}
.outlined:hover{
    transition: all var(--transition-time-fast) ease;
    border: var(--normal-border) solid var(--highlight-blue);
}

::placeholder {
    color: var(--grey-color);
}

::-webkit-calendar-picker-indicator {
    // white date picker icon
    filter: invert(1);
}
::-webkit-calendar-picker-indicator:hover {
    filter: invert(0.8);
}

